[package]
name = "membranes-cpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
proptest = ["dep:proptest", "dep:proptest-derive"]

[dependencies]
bitflags = "1.3.2"
proptest = { version = "1.2.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }
strum = { version = "0.25.0", features = ["derive"] }
wasm-bindgen = "0.2.87"

[dev-dependencies]
membranes-cpu = { path = ".", features = ["proptest"] }
proptest = "1.2.0"
proptest-derive = "0.3.0"
test-strategy = "0.3.0"
