[package]
name = "nes-emu-cpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
proptest = ["dep:proptest", "dep:proptest-derive"]

[dependencies]
bitflags = "1.3.2"
nes-emu-bits = { path = "../nes-emu-bits" }
proptest = { version = "1.2.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }

[dev-dependencies]
nes-emu-cpu = { path = ".", features = ["proptest"] }
proptest = "1.2.0"
proptest-derive = "0.3.0"
