[package]
name = "nes-emu-sdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nes-emu = { path = "../nes-emu" }
nes-emu-cpu = { path = "../nes-emu-cpu" }
nes-emu-rom = { path = "../nes-emu-rom" }
sdl2 = { version = "0.34.0" }
rand = "=0.7.3"

