[package]
name = "nes_emu_cpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
nes_emu_bits = { path = "../nes_emu_bits" }

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
test-strategy = "0.2.1"
